[tool.poetry]
name = "survey-assist-themes"
version = "0.1.0"
description = "Bake in the government consult themeFinder package for response analysis"
authors = ["Steve Gibbard <steve.gibbard@ons.gov.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "survey_assist_themes", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
themefinder = ">=0.7.3,<0.8.0"
pandas = ">=2.3.3,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
langchain-google-vertexai = "*"
google-cloud-storage = ">=2.18.0,<3.0.0"
survey-assist-utils = {git = "https://github.com/ONSdigital/survey-assist-utils.git", tag = "v0.0.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
mypy = "^1.0.0"
ruff = "^0.6.0"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=survey_assist_themes --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
packages = ["survey_assist_themes"]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
