[project]
name = "survey-assist-themes"
version = "0.1.0"
description = "Bake in the government consult themeFinder package for response analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
    {name = "Steve Gibbard", email = "steve.gibbard@ons.gov.uk"}
]
dependencies = [
    "themefinder>=0.7.3,<0.8.0",
    "pandas>=2.3.3,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "langchain-google-vertexai",
    "google-cloud-storage>=2.18.0,<3.0.0",
    "survey-assist-utils @ git+https://github.com/ONSdigital/survey-assist-utils.git@v0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[project.urls]
homepage = "https://github.com/ONSdigital/survey-assist-themes"

[tool.poetry]
packages = [{include = "survey_assist_themes", from = "src"}]

# -----------------------------
# TOOL CONFIGURATION
# -----------------------------

[tool.isort]
profile = "black"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=survey_assist_themes --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
packages = ["survey_assist_themes"]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
